{
    "name": "JoyStickControl",
    "maps": [
        {
            "name": "Response",
            "id": "6468efe6-db71-4473-b795-a3df0999ae4a",
            "actions": [
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "2ed55659-07eb-4dd0-ab74-1e2ab239849b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "fc6935f1-4830-4668-bb04-f0ca61a57c80",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MakeDec",
                    "type": "Button",
                    "id": "218e6958-67da-4c53-bf76-624c2a157360",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Straight",
                    "type": "Button",
                    "id": "2626de58-369b-4089-8168-5d6fc294babb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "a3d3d28d-af4a-44cb-bb5f-92ded557dc29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "e2a4476d-d261-4bfe-aec6-0dc91902f1c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9784bd2b-1485-436c-906d-6bb2add0a0c3",
                    "path": "<HID::Logitech Logitech Dual Action>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0140430-2888-4ea9-9b32-d205318ce721",
                    "path": "<XInputController>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d0a7711-0763-441e-b763-19d408a9d646",
                    "path": "<HID::Logitech Logitech Dual Action>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afefec89-2eae-4cdc-b273-750e252bc1e5",
                    "path": "<XInputController>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78d16742-7fcf-44a1-a176-d3eabbcc7944",
                    "path": "<HID::Logitech Logitech Dual Action>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MakeDec",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9412684c-60c7-419b-86b1-965d78906ab9",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MakeDec",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45a0f41a-51c2-41a2-95b3-07efa3ef9d0a",
                    "path": "<HID::Logitech Logitech Dual Action>/hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Straight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c64e6f3e-b38a-457d-a8ef-8c55edc5f4db",
                    "path": "<XInputController>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Straight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5ddaba9-2c41-4d30-acb3-5e89696819c8",
                    "path": "<HID::Logitech Logitech Dual Action>/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eda317a5-44a5-4b31-a8ba-8480e7a99b9b",
                    "path": "<XInputController>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "825994a4-6a68-4ebb-9a5c-6be52bde9137",
                    "path": "<HID::Logitech Logitech Dual Action>/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9894f6ba-c9cb-42b0-9f5b-dcebb15ab059",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}